# MapReduceExec

./: CMakeLists.txt  MRExec  README.md  main.cpp
headers/: FileProcessorBase.hpp  MapperBase.hpp
